--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap");
+
+body {
+  font-family: "Jost", sans-serif;
+}
+
+p {
+  @apply font-normal text-[16px] leading-[26px];
+}
+h1 {
+  @apply font-medium text-[48px] leading-[48px] space-x-[2px];
+}
