--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap");
 
-body {
-  font-family: "Jost", sans-serif;
+@layer base {
+  body {
+    font-family: "Jost", sans-serif;
+  }
 }
 
 p {
